--- a/DBJ/pom.xml
+++ b/DBJ/pom.xml
@@ -14,6 +14,20 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      
+       <plugin>
+      <groupId>org.sonatype.plugins</groupId>
+      <artifactId>nexus-staging-maven-plugin</artifactId>
+      <version>1.6.7</version>
+      <extensions>true</extensions>
+      <configuration>
+        <serverId>ossrh</serverId>
+        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+      </configuration>
+    </plugin>
+    
+  
     </plugins>
   </build>
   <packaging>jar</packaging>
@@ -23,6 +37,8 @@
   with some Method, So user have to give the credentials and the parameter into the function</description>
   <url>https://github.com/soumyadip007/DBJ.jar</url>
   
+  
+  
   <licenses>
   <license>
     <name>The Apache License, Version 2.0</name>
@@ -30,6 +46,20 @@
   </license>
 </licenses>
   
+  
+  <distributionManagement>
+  <snapshotRepository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  </snapshotRepository>
+  <repository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+  </repository>
+  
+</distributionManagement>
+
+
    <developers>
     <developer>
       <name>Soumyadip Chowdhury</name>
@@ -45,5 +75,8 @@
   <developerConnection>scm:git:ssh://github.com:soumyadip007/DBJ.jar.git</developerConnection>
    <url>https://github.com/soumyadip007/DBJ.jar</url>
 </scm>
+  
+  
+  
   
 </project>
