--- a/DBJ/pom.xml
+++ b/DBJ/pom.xml
@@ -5,6 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <build>
     <sourceDirectory>DBJ_src</sourceDirectory>
+    
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -68,6 +69,18 @@
       </executions>
     </plugin>
     
+    <plugin>
+  <groupId>org.sonatype.plugins</groupId>
+  <artifactId>nexus-staging-maven-plugin</artifactId>
+  <version>1.6.7</version>
+  <extensions>true</extensions>
+  <configuration>
+     <serverId>ossrh</serverId>
+     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+     <autoReleaseAfterClose>true</autoReleaseAfterClose>
+  </configuration>
+</plugin>
+    
     </plugins>
   </build>
   <packaging>jar</packaging>
@@ -77,8 +90,7 @@
   with some Method, So user have to give the credentials and the parameter into the function</description>
   <url>https://github.com/soumyadip007/DBJ.jar</url>
   
-  
-  
+
   <licenses>
   <license>
     <name>The Apache License, Version 2.0</name>
